# shiryobukai-uni

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.development  Dockerfile.scratch  docker-compose.yaml
src/: main.rs
