[package]
name = "shiryobukai-uni"
version = "0.1.0"
authors = ["CaffeinePower <cffnpwr@gmail.com>"]
edition = "2021"

license-file = "LICENSE"

[dependencies]
axum = "0.5.17"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"